fix scrollbar flickering

--- a/src/components/UI/Modal/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal/Modal.module.scss
@@ -19,6 +19,7 @@
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 20px 40px;
+    min-height: 80px;
     overflow: auto;
 
     & > * {
